Add API Key auth
Resolve #32
