# enroute-cp/webhttp.go
@@ -4,23 +4,44 @@ import (
 	"fmt"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
-	webhttp "github.com/saarasio/enroute/enroute-cp/webhttp"
-	"os"
-	"github.com/swaggo/echo-swagger"
 	_ "github.com/saarasio/enroute/enroute-cp/docs"
+	webhttp "github.com/saarasio/enroute/enroute-cp/webhttp"
+	"github.com/swaggo/echo-swagger"
+	"os"
+	"strings"
 )
+
+var SECRET = "treehugger"
 
 // @title Enroute API
 // @version 1.0
 // @description APIs to configure multiple envoy proxies
-
 // @contact.name API Support
 // @contact.url https://saaras.io/
-
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func main() {
 	e := echo.New()
 
 	// middleware
+
+	config := middleware.KeyAuthConfig{
+		Skipper: func(c echo.Context) bool {
+			uri := c.Request().RequestURI
+			if strings.HasPrefix(uri, "/swagger") {
+				return true
+			}
+			return false
+		},
+		KeyLookup:  "header:" + echo.HeaderAuthorization,
+		AuthScheme: "Bearer",
+		Validator: func(key string, c echo.Context) (bool, error) {
+			return key == SECRET, nil
+		},
+	}
+
+	e.Use(middleware.KeyAuthWithConfig(config))
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	e.Use(middleware.Logger())
 
