# enroute-cp/webhttp/upstream.go
@@ -64,10 +64,11 @@ query get_upstream_routes($upstream_name: String!) {
 // @Tags upstream
 // @Accept  json
 // @Produce  json
-// @Param Upstream body webhttp.Upstream true "Upstream to update" 
-// @Param upstream_name path string true "Name of upstream to update" 
+// @Param Upstream body webhttp.Upstream true "Upstream to update"
+// @Param upstream_name path string true "Name of upstream to update"
 // @Success 200 {} integer OK
 // @Router /upstream/{upstream_name} [patch]
+// @Security ApiKeyAuth
 func PATCH_Upstream(c echo.Context) error {
 
 	var QPatchUpstream = `
@@ -340,9 +341,10 @@ func validate_upstream(u *Upstream) (int, string) {
 // @Tags upstream
 // @Accept  json
 // @Produce  json
-// @Param Upstream body webhttp.Upstream true "Upstream to create" 
+// @Param Upstream body webhttp.Upstream true "Upstream to create"
 // @Success 200 {} integer OK
 // @Router /upstream [post]
+// @Security ApiKeyAuth
 func POST_Upstream(c echo.Context) error {
 	log2 := logrus.StandardLogger()
 	log := log2.WithField("context", "web-http")
@@ -487,9 +489,10 @@ func db_get_one_upstream(upstream_name string, decode bool, log *logrus.Entry) (
 // @Tags upstream
 // @Accept  json
 // @Produce  json
-// @Param upstream_name path string true "Name of upstream to delete" 
+// @Param upstream_name path string true "Name of upstream to delete"
 // @Success 200 {} integer OK
 // @Router /upstream/{upstream_name} [get]
+// @Security ApiKeyAuth
 func GET_One_Upstream(c echo.Context) error {
 
 	log2 := logrus.StandardLogger()
@@ -505,10 +508,11 @@ func GET_One_Upstream(c echo.Context) error {
 // @Tags upstream, operational-verbs
 // @Accept  json
 // @Produce  json
-// @Param upstream_name_src path string true "Name of upstream" 
-// @Param upstream_name_dst path string true "Name of upstream" 
+// @Param upstream_name_src path string true "Name of upstream"
+// @Param upstream_name_dst path string true "Name of upstream"
 // @Success 200 {} integer OK
 // @Router /upstream/copy/{upstream_name_src}/{upstream_name_dst} [get]
+// @Security ApiKeyAuth
 func POST_Upstream_Copy(c echo.Context) error {
 	log2 := logrus.StandardLogger()
 	log := log2.WithField("context", "web-http")
@@ -535,6 +539,7 @@ func POST_Upstream_Copy(c echo.Context) error {
 // @Produce  json
 // @Success 200 {} integer OK
 // @Router /upstream [get]
+// @Security ApiKeyAuth
 func GET_Upstream(c echo.Context) error {
 	var buf bytes.Buffer
 	var args map[string]string
@@ -555,9 +560,10 @@ func GET_Upstream(c echo.Context) error {
 // @Tags upstream
 // @Accept  json
 // @Produce  json
-// @Param upstream_name path string true "Name of upstream to delete" 
+// @Param upstream_name path string true "Name of upstream to delete"
 // @Success 200 {} integer OK
 // @Router /upstream/{upstream_name} [delete]
+// @Security ApiKeyAuth
 func DELETE_Upstream(c echo.Context) error {
 	var buf bytes.Buffer
 	var args map[string]string
@@ -580,9 +586,10 @@ func DELETE_Upstream(c echo.Context) error {
 // @Tags upstream, route
 // @Accept  json
 // @Produce  json
-// @Param upstream_name path string true "Name of upstream" 
+// @Param upstream_name path string true "Name of upstream"
 // @Success 200 {} integer OK
 // @Router /upstream/{upstream_name}/route [get]
+// @Security ApiKeyAuth
 func GET_Upstream_Routes(c echo.Context) error {
 	var buf bytes.Buffer
 	var args map[string]string
